--- a/style.css
+++ b/style.css
@@ -1,156 +1,211 @@
-body{
-    margin: 0;
-    padding: 0;
+/*header/jumbroton section*/
+h1 {
+  font-family: "Prata", serif;
+  color: black;
+}
+.jumbotron {
+  padding: 2rem 1rem;
+  background-color: white;
+}
+
+/*About section*/
+h2 {
+  font-family: "Prata", serif;
+  color: white;
+}
+#about {
+  background-color: #abd2cf;
+  color: white;
+  width: 100%;
+  margin: auto;
+  padding: 50px;
+}
+.more-about,
+.visit-ss {
+  background-color: white;
+  color: #abd2cf;
+  border-radius: 15px;
+  text-decoration: none;
+  padding: 5px;
+}
+.more-about:hover,
+.visit-ss:hover {
+  color: black;
+}
+
+.ss {
+  text-decoration: none;
+  margin: 10px;
+  padding: 5px;
+  background-color: white;
+  color: #2c6a67;
+  border-radius: 15px;
+  border: 2px;
+}
+.ss:hover {
+  text-decoration: none;
+  background-color: #e7bd44;
+  color: white;
+  border-radius: 15px;
+  border: 2px;
+  border-color: #e7bd44;
+}
+
+#experience {
+  background-color: #296d6c;
+}
+
+footer {
+  background-color: #bfd1a0;
+  color: white;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+}
+
+#space {
+  color: #f0d119;
+}
+
+/*education timeline*/
+h4 {
+  font-family: "Yeseva One", cursive;
+}
+/* The actual timeline (the vertical ruler) */
+.main-timeline-4 {
+  position: relative;
+}
+
+/* The actual timeline (the vertical ruler) */
+.main-timeline-4::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.timeline-4 {
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.timeline-4::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  right: -5px;
+  background-color: black;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left-4 {
+  padding: 0px 40px 20px 0px;
+  left: 0;
+}
+
+/* Place the container to the right */
+.right-4 {
+  padding: 0px 0px 20px 40px;
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left-4::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  right: 30px;
+  border: medium solid #bfd1a0;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #bfd1a0;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right-4::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #f3c5b9;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #f3c5b9 transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right-4::after {
+  left: -10px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .main-timeline-4::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .timeline-4 {
     width: 100%;
-    font-family: 'Nunito', sans-serif;
-    background-color: white;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .timeline-4::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left-4::after,
+  .right-4::after {
+    left: 18px;
+  }
+
+  .left-4::before {
+    right: auto;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right-4 {
+    left: 0%;
+  }
 }
 
-nav{
-    font-weight: bold;
-    line-height: 30px;
-    display: block;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
+#skill {
+  border: 0;
 }
 
-nav ul{
-    list-style: none;
-    text-align: center;
+/*Form Contact*/
+.cont-desc {
+  font-family: "Prata", serif;
+  padding: 20px;
+  margin: 20px;
 }
 
-nav ul li{
-    display: inline-block;
-    padding: 10px;
-    margin-right: 10px;
+.btn-sbmt {
+  background-color: wh#abd2cf;
+  color: black;
+  border-radius: 15px;
+  text-decoration: none;
+  padding: 5px;
 }
-
-nav ul li a{
-    text-decoration: none;
-    color: #01949A;
-}
-
-nav ul li a:hover{
-    color: #004369;
-}
-
-.cont {
-    background-color: #01949A;
-    color: white;
-    border-radius: 15px;
-    padding: 10px;
-}
-.cont:hover{
-    background-color: #DB1F48;
-    color: white;
-    border-radius: 15px;
-    border: 2px solid #DB1F48;
-}
-.isi {
-    position: relative;
-    text-align: center;
-    margin: 50px;
-}
-
-.desc {
-    color: #004369;
-    margin-left: 150px;
-    margin-right: 150px;
-    line-height: 1.3;
-}
-p {
-    font-size: larger;
-}
-span {
-    color: #01949A;
-}
-.more {
-    background-color:#DB1F48;
-    color: white;
-    border-radius: 15px;
-    padding: 10px;
-    text-decoration: none;
-    font-weight: bold;
-}
-.more:hover {
-    background-color: #004369;
-    color: white;
-    border-radius: 15px;
-    border: 2px solid #004369;
-    transition: 0.5s
-}
-
-.about{
-    width: 100%;
-    margin: auto;
-    background-color: #01949A;
-    display: flex;
-}
-
-.abt img {
-    align-items: center;
-    margin: auto;
-}
-
-h2{
-    color: #01949A;
-    text-align: center;
-}
-
-.abt-text {
-    color: white;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin: 50px;
-    padding: 50px;
-}
-
-.team-list{
-    width: 100%;
-    position: relative;
-    display: flex;
-    text-align: center;
-}
-
-.team-list img{
-    width: 150px;
-    margin: 20px;
-}
-.team-list p{
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    text-align: center;
-    color: #01949A;
-}
-
-/*mengatur bagian formulir*/
-#formulir {
-    background-color: white;
-    margin: 20px;
-    border-radius: 10px;
-    padding: 30px;
-}
-input{
-    width: 40%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-/*mengatur tombol submit*/
-input[type=submit]{
-    background-color: #01949A;
-    border-color: #01949A;
-    border-width: 1px;
-    border-radius: 5px;
-    color: white;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-}
-input[type=submit]:hover{
-    background-color: white;
-    color: #01949A;
+.btn-sbmt:hover,
+.visit-ss:hover {
+  color: black;
 }
