--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*header/jumbroton section*/
+/* Header Section */
 h1 {
   font-family: "Prata", serif;
   color: black;
@@ -8,66 +8,38 @@ h1 {
   background-color: white;
 }
 
-/*About section*/
+/* About section */
 h2 {
   font-family: "Prata", serif;
-  color: white;
 }
 #about {
-  background-color: #abd2cf;
-  color: white;
+  background-color: #f8ea8c;
+  color: black;
   width: 100%;
   margin: auto;
   padding: 50px;
 }
-.more-about,
+/* Button visit Sustainble Space */
 .visit-ss {
   background-color: white;
-  color: #abd2cf;
-  border-radius: 15px;
-  text-decoration: none;
-  padding: 5px;
-}
-.more-about:hover,
-.visit-ss:hover {
   color: black;
-}
-
-.ss {
+  border-radius: 15px;
   text-decoration: none;
-  margin: 10px;
   padding: 5px;
-  background-color: white;
-  color: #2c6a67;
-  border-radius: 15px;
-  border: 2px;
+  width: 30%;
+  border-bottom: 1px solid black;
 }
-.ss:hover {
+.visit-ss:hover {
+  background-color: black;
+  color: white;
+  border-radius: 15px;
   text-decoration: none;
-  background-color: #e7bd44;
-  color: white;
-  border-radius: 15px;
-  border: 2px;
-  border-color: #e7bd44;
+  padding: 5px;
+  width: 30%;
+  border-bottom: 1px solid black;
 }
 
-#experience {
-  background-color: #296d6c;
-}
-
-footer {
-  background-color: #bfd1a0;
-  color: white;
-  text-align: center;
-  margin: 10px;
-  padding: 10px;
-}
-
-#space {
-  color: #f0d119;
-}
-
-/*education timeline*/
+/*Education Timeline*/
 h4 {
   font-family: "Yeseva One", cursive;
 }
@@ -127,9 +99,9 @@ h4 {
   top: 18px;
   z-index: 1;
   right: 30px;
-  border: medium solid #bfd1a0;
+  border: medium solid #f8ea8c;
   border-width: 10px 0 10px 10px;
-  border-color: transparent transparent transparent #bfd1a0;
+  border-color: transparent transparent transparent #f8ea8c;
 }
 
 /* Add arrows to the right container (pointing left) */
@@ -139,9 +111,9 @@ h4 {
   top: 18px;
   z-index: 1;
   left: 30px;
-  border: medium solid #f3c5b9;
+  border: medium solid #4cd7d0;
   border-width: 10px 10px 10px 0;
-  border-color: transparent #f3c5b9 transparent transparent;
+  border-color: transparent #4cd7d0 transparent transparent;
 }
 
 /* Fix the circle for containers on the right side */
@@ -187,6 +159,7 @@ h4 {
   }
 }
 
+/* SkillSection */
 #skill {
   border: 0;
 }
@@ -197,15 +170,151 @@ h4 {
   padding: 20px;
   margin: 20px;
 }
-
-.btn-sbmt {
-  background-color: wh#abd2cf;
-  color: black;
-  border-radius: 15px;
+input[type="submit"] {
+  width: 100%;
+  background-color: green;
+  border-color: green;
+  border-width: 1px;
+  border-radius: 5px;
+  color: white;
   text-decoration: none;
-  padding: 5px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
-.btn-sbmt:hover,
-.visit-ss:hover {
+input[type="submit"]:hover {
+  background-color: white;
+  color: green;
+}
+
+/* Skill Section */
+
+/* Footer Section */
+footer {
+  background-color: white;
   color: black;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+  font-family: "Prata", serif;
+}
+
+/*EXPERIENCE Timeline*/
+h4 {
+  font-family: "Yeseva One", cursive;
+}
+/* The actual timeline (the vertical ruler) */
+.main-TL-4 {
+  position: relative;
+  width: 70%;
+}
+
+/* The actual timeline (the vertical ruler) */
+.main-TL-4::after {
+  content: "";
+  position: absolute;
+  width: 1px;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.TL-4 {
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+}
+
+/* The circles on the timeline */
+.TL-4::after {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 15px;
+  right: -5px;
+  background-color: black;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left-4 {
+  padding: 0px 40px 20px 0px;
+  left: 0;
+}
+
+/* Place the container to the right */
+.right-4 {
+  padding: 0px 0px 20px 40px;
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left-4::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  right: 30px;
+  border: medium solid #f8ea8c;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #f8ea8c;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right-4::before {
+  content: " ";
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #4cd7d0;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #4cd7d0 transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right-4::after {
+  left: -10px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .main-TL-4::after {
+    left: 31px;
+  }
+
+  /* Full-width containers */
+  .TL-4 {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+  /* Make sure that all arrows are pointing leftwards */
+  .TL-4::before {
+    left: 60px;
+    border: medium solid white;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent white transparent transparent;
+  }
+
+  /* Make sure all circles are at the same spot */
+  .left-4::after,
+  .right-4::after {
+    left: 18px;
+  }
+
+  .left-4::before {
+    right: auto;
+  }
+
+  /* Make all right containers behave like the left ones */
+  .right-4 {
+    left: 0%;
+  }
 }
